# t2s

./: .env.example  .gitignore  README.md  agent.py  answer.py  app.py  config.py  data_dictionary.py  data_source.py  pyproject.toml  pyrightconfig.json  t2s.py  ui.py
tests/: test_agent.py  test_api.py  test_data_dictionary.py  test_data_source.py  test_ui.py
